plugins {
    id 'java'
    id 'application'
    id 'org.graalvm.buildtools.native' version '0.11.5'
}

version = '0.1.0'

@org.gradle.work.DisableCachingByDefault(because = 'Repairs provisioned toolchain launchers outside the build directory')
abstract class RepairProvisionedNativeImageLaunchers extends org.gradle.api.DefaultTask {
    @org.gradle.api.tasks.Input
    abstract org.gradle.api.provider.Property<String> getJavaHomePath()

    @org.gradle.api.tasks.Input
    abstract org.gradle.api.provider.Property<String> getOperatingSystemName()

    @org.gradle.api.tasks.TaskAction
    void repair() {
        def javaHome = new File(javaHomePath.get())
        def isWindows = operatingSystemName.get().toLowerCase().contains('windows')

        if (isWindows) {
            def targetFile = new File(javaHome, 'lib/svm/bin/native-image.exe')
            def launcherFile = new File(javaHome, 'bin/native-image.exe')
            if (targetFile.exists() && !launcherFile.exists()) {
                java.nio.file.Files.copy(targetFile.toPath(), launcherFile.toPath())
            }
        } else {
            def launcherTargets = [
                'native-image'          : new File(javaHome, 'lib/svm/bin/native-image'),
                'native-image-configure': new File(javaHome, 'lib/svm/bin/native-image-configure')
            ]
            for (entry in launcherTargets.entrySet()) {
                def launcherName = entry.key
                def targetFile = entry.value
                def launcherFile = new File(javaHome, "bin/${launcherName}")
                if (targetFile.exists() && targetFile.canExecute() && (!launcherFile.exists() || launcherFile.length() == 0 || !launcherFile.canExecute())) {
                    launcherFile.text = "#!/usr/bin/env sh\nexec \"${targetFile.absolutePath}\" \"\$@\"\n"
                    launcherFile.setExecutable(true, false)
                }
            }
        }
    }
}

repositories {
    mavenCentral()
}

// Generate build metadata (date + git branch) into build-info.properties
import java.time.ZonedDateTime
import java.time.format.DateTimeFormatter

def buildInfoOutput = file('build/generated-resources/build-info.properties')

// Compute values at configuration time
def buildDate = ZonedDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ssXXX"))
def buildBranch
try {
    buildBranch = 'git rev-parse --abbrev-ref HEAD'.execute().text.trim()
} catch (Exception e) {
    buildBranch = 'unknown'
}
if (buildBranch.isEmpty()) buildBranch = 'unknown'
def projectVersionVal = project.version.toString()

def generatedSrc = file('build/generated-sources/java')

// Write a Java source file with constants baked in (works in native image)
def writeBuildInfoSrc = tasks.register('writeBuildInfoSrc') {
    description = 'Writes BuildInfoConstants.java with version/date/branch'
    outputs.file(new File(generatedSrc, 'com/proaut/claudeshim/BuildInfoConstants.java'))
    doLast {
        generatedSrc.mkdirs()
        def target = new File(generatedSrc, 'com/proaut/claudeshim/BuildInfoConstants.java')
        def safeBranch = buildBranch.replace('\\', '\\\\').replace('"', '\\"')
        target.text = """\
// Auto-generated — do not edit
package com.proaut.claudeshim;

/** Build-time constants baked into the binary (works in GraalVM native image). */
final class BuildInfoConstants {
    static final String VERSION = "${projectVersionVal}";
    static final String DATE    = "${buildDate}";
    static final String BRANCH  = "${safeBranch}";
}
"""
    }
}

// Write build-info.properties for classpath-based runs (dev/Uberjar)
def writeBuildInfo = tasks.register('writeBuildInfo') {
    description = 'Writes build-info.properties with date, branch and version'
    outputs.file(buildInfoOutput)
    dependsOn(writeBuildInfoSrc)
    doLast {
        buildInfoOutput.parentFile.mkdirs()
        buildInfoOutput.text = """\
build.version=${projectVersionVal}
build.date=${buildDate}
build.branch=${buildBranch}
"""
    }
}

sourceSets.main.java.srcDir(generatedSrc)

tasks.named('compileJava') {
    dependsOn(writeBuildInfoSrc)
}

processResources {
    dependsOn(writeBuildInfo)
    from(buildInfoOutput.parent)
}

dependencies {
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'org.slf4j:slf4j-simple:2.0.17'
    implementation 'org.jline:jline-terminal:3.27.1'
    implementation 'org.jline:jline-terminal-jni:3.27.1'
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-Xlint:all']
    options.compilerArgs -= ['-Xlint:processing']
    options.compilerArgs -= ['-Xlint:serial']
}

test {
    useJUnitPlatform()
}

application {
    mainClass = 'com.proaut.claudeshim.Main'
}

graalvmNative {
    binaries {
        main {
            imageName = "claude"
            javaLauncher = javaToolchains.launcherFor { spec ->
                spec.languageVersion = JavaLanguageVersion.of(25)
                spec.vendor = JvmVendorSpec.GRAAL_VM
            }
            buildArgs.add('--enable-url-protocols=https')
            metadataRepository {
                enabled = true
            }
        }
    }
}

def repairProvisionedNativeImageLaunchers = tasks.register('repairProvisionedNativeImageLaunchers', RepairProvisionedNativeImageLaunchers) {
    javaHomePath.set(graalvmNative.binaries.main.javaLauncher.map { launcher ->
        launcher.metadata.installationPath.asFile.absolutePath
    })
    operatingSystemName.set(providers.systemProperty('os.name').orElse(''))
}

tasks.named('nativeCompile') {
    dependsOn(repairProvisionedNativeImageLaunchers)
}


